Fix align for the timeline

--- a/templates/redaxmedia/assets/styles/timeline.css
+++ b/templates/redaxmedia/assets/styles/timeline.css
@@ -156,7 +156,7 @@
 		&:after,
 		&:before
 		{
-			left: -7.375em;
+			left: -7em;
 		}
 	}
 
